# crim-libtorch-extensions

./: .gitignore  CHANGES.md  CMakeLists.txt  EfficientNet.cpp  EfficientNet.h  LICENSE  Makefile  README.md  config-efficientnet.json  requirements.txt  setup.cfg  setup.py
DataAugmentation/: DataAugmentation.cpp  Util.cpp
TestBench/: CMakeLists.txt  TestBench.cpp  TestBench.sln  TestBench.vcxproj  formatter.h  logger.h  training.cpp  training.h
cmake/: FindCLI11.cmake  FindOpenCV.cmake  FindTorch.cmake  FindTorchVision.cmake  Findplog.cmake  configs.cmake  utils.cmake
efficientnet_libtorch/: __init__.py
include/: cte_macros.h  dirent.h  stdafx.h  training.h  version.h
include/data/: DataAugmentation.h  RandomRotation.h  Util.h
include/models/: Base.h  BaseModel.h  EfficientNet.h  NFNet.h  SGD_AGC.h
include/nn/models/: BaseModel.h  EfficientNet.h  NFNet.h  ResNet.h
include/nn/modules/: BaseConv.h  activation.h
include/optim/: SGD_AGC.h
include/windows/: dirent.h
sln/: ALL_BUILD.vcxproj  CRIM-LibTorch-Extensions.vcxproj  EfficientNet.sln  EfficientNet.vcxproj  INSTALL.vcxproj  ZERO_CHECK.vcxproj
sln_marc/: ALL_BUILD.vcxproj  EfficientNet.sln  EfficientNet.vcxproj  INSTALL.vcxproj  ZERO_CHECK.vcxproj
source/: CMakeLists.txt  python_bindings.cpp  training.cpp
source/data/: DataAugmentation.cpp  RandomRotation.cpp  Util.cpp
source/models/: EfficientNet.cpp  NFNet.cpp  SGD_AGC.cpp
source/nn/models/: EfficientNet.cpp  NFNet.cpp  SGD_AGC.cpp
source/nn/modules/: activation.cpp
source/optim/: SGD_AGC.cpp
source/python/: bindings.cpp
tests/: CMakeLists.txt  test.cpp  test_models_efficientnet_arch.cpp  test_models_nfnet_arch.cpp  test_module.py
